--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
 
+
+    //Volley
+    compile 'com.android.volley:volley:1.0.0'
+
     //RecyclerView
     compile 'com.android.support:recyclerview-v7:26.+'
 }
