--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".volley.app.AppController"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -19,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".retrofit.RetrofitMain"/>
+        <activity android:name=".volley.VolleyMain"/>
     </application>
 
 </manifest>
